pwrp-interface-orig/rt_net.h

enum net_eMsg {
	net_eMsg__ = -1,
	net_eMsg_error = 0,
	net_eMsg_id = 0 + 1,
	net_eMsg_idAck = 0 + 2,
	net_eMsg_idAck2 = 0 + 3,
	net_eMsg_volumes = 0 + 4,
	net_eMsg_volumesR = 0 + 5,
	net_eMsg_subAdd = 0 + 6,
	net_eMsg_subRemove = 0 + 7,
	net_eMsg_subData = 0 + 8,
	net_eMsg_sanAdd = 0 + 9,
	net_eMsg_sanRemove = 0 + 10,
	net_eMsg_sanUpdate = 0 + 11,
	net_eMsg_nameToObject = 0 + 12,
	net_eMsg_oidToObject = 0 + 13,
	net_eMsg_objectR = 0 + 14,
	net_eMsg_getObjectInfo = 0 + 15,
	net_eMsg_getObjectInfoR = 0 + 16,
	net_eMsg_setObjectInfo = 0 + 17,
	net_eMsg_setObjectInfoR = 0 + 18,
	net_eMsg_flush = 0 + 19,
	net_eMsg_createObject = 0 + 20,
	net_eMsg_deleteObject = 0 + 21,
	net_eMsg_moveObject = 0 + 22,
	net_eMsg_renameObject = 0 + 23,
	net_eMsg_nodeUp = 0 + 24,
	net_eMsg_nodeDown = 0 + 25,
	net_eMsg_getCclass = 0 + 26,
	net_eMsg_getCclassR = 0 + 27,
	net_eMsg_getGclass = 0 + 28,
	net_eMsg_getGclassR = 0 + 29,
	net_eMsg_serverConnect = 0 + 30,
	net_eMsg_fileList = 0 + 31,
	net_eMsg_fileListR = 0 + 32,
	net_eMsg_getCircBuffer = 0 + 33,
	net_eMsg_getCircBufferR = 0 + 34,
	net_eMsg_updateCircBuffer = 0 + 35,
	net_eMsg_updateCircBufferR = 0 + 36,
	net_eMsg_ = 0 + 37,
	net_eMsg_volumes7 = 0 + 38,
	net_eMsg_end = 0 + 39,
};
typedef enum net_eMsg net_eMsg;
enum net_eEvent {
	net_eEvent__ = -1,
	net_eEvent_nodeUp = 0,
	net_eEvent_nodeDown = 0 + 1,
	net_eEvent_id = 0 + 2,
	net_eEvent_idAck = 0 + 3,
	net_eEvent_idAck2 = 0 + 4,
	net_eEvent_error = 0 + 5,
	net_eEvent_other = 0 + 6,
	net_eEvent_ = 0 + 7,
};
typedef enum net_eEvent net_eEvent;
struct net_sMessage {
	pwr_tBoolean xdr;
	pwr_tUInt32 msn;
	pwr_tNodeId nid;
};
typedef struct net_sMessage net_sMessage;
struct net_sError {
	net_sMessage hdr;
	qcom_sQid remqid;
	pwr_tStatus sts;
};
typedef struct net_sError net_sError;
struct net_sNode {
	qcom_sQid handler;
	pwr_tUInt32 netver;
	pwr_tObjid nod_oid;
	pwr_tObjid vol_oid;
};
typedef struct net_sNode net_sNode;
struct net_sId {
	net_sMessage hdr;
	net_sNode node;
};
typedef struct net_sId net_sId;
struct net_sIdAck2 {
	net_sMessage hdr;
};
typedef struct net_sIdAck2 net_sIdAck2;
struct net_sNodeUp {
	net_sMessage hdr;
	pwr_tNodeId nid;
};
typedef struct net_sNodeUp net_sNodeUp;
enum net_eState {
	net_eState__ = -1,
	net_eState_down = -1 + 1,
	net_eState_istrt = -1 + 2,
	net_eState_astrt = -1 + 3,
	net_eState_up = -1 + 4,
	net_eState_ = -1 + 5,
};
typedef enum net_eState net_eState;
struct net_sClassDef {
	pwr_tInt32 Editor;
	pwr_tInt32 Method;
	pwr_tUInt32 Flags;
	pwr_tUInt32 NumOfObjBodies;
	pwr_tInt32 PopEditor;
};
typedef struct net_sClassDef net_sClassDef;
struct net_sObjBodyDef {
	pwr_tStructName StructName;
	pwr_tUInt32 NumOfParams;
	pwr_tUInt32 Size;
	pwr_tUInt32 NextAix;
	pwr_tUInt32 Flags;
};
typedef struct net_sObjBodyDef net_sObjBodyDef;
struct net_sParInfo {
	pwr_tPgmName PgmName;
	pwr_eType Type;
	pwr_tUInt32 Offset;
	pwr_tUInt32 Size;
	pwr_tUInt32 Flags;
	pwr_tUInt32 Elements;
	pwr_tUInt32 ParamIndex;
};
typedef struct net_sParInfo net_sParInfo;
struct net_sParam {
	net_sParInfo Info;
	pwr_tTypeId TypeRef;
};
typedef struct net_sParam net_sParam;
struct net_sSubSpec {
	pwr_tSubid sid;
	pwr_tUInt32 dt;
	pwr_tBoolean sub_by_name;
	pwr_sAttrRef aref;
};
typedef struct net_sSubSpec net_sSubSpec;
struct net_sSanEntry {
	pwr_tObjid oid;
	pwr_tSubid sid;
};
typedef struct net_sSanEntry net_sSanEntry;
struct net_sAlarm {
	pwr_tUInt32 a;
	pwr_tUInt32 b;
	pwr_tUInt32 maxa;
	pwr_tUInt32 maxb;
	pwr_tUInt32 idx;
};
typedef struct net_sAlarm net_sAlarm;
struct net_sSanData {
	net_sSanEntry sane;
	net_sAlarm al;
};
typedef struct net_sSanData net_sSanData;
struct net_sOidToObject {
	net_sMessage hdr;
	pwr_tObjid oid;
	pwr_tBitMask trans;
	pwr_tUInt32 lcount;
	pwr_tUInt32 rcount;
};
typedef struct net_sOidToObject net_sOidToObject;
typedef union {
 pwr_tBitMask m;
 pwr_32Bits (
 pwr_Bits( isParent , 1),
 pwr_Bits( isAliasClient , 1),
 pwr_Bits( isAliasServer , 1),
 pwr_Bits( isMountClient , 1),
 pwr_Bits( inSibList , 1),
 pwr_Bits( hasSubClass , 1),
 pwr_Bits( fill0 , 2),,

 pwr_Bits( fill1 , 8),,,,,,,,
 pwr_Bits( fill2 , 8),,,,,,,,
 pwr_Bits( fill3 , 8),,,,,,,
 ) b;

#define net_mGo__ 0
#define net_mGo_isParent pwr_Bit(0)
#define net_mGo_isAliasClient pwr_Bit(1)
#define net_mGo_isAliasServer pwr_Bit(2)
#define net_mGo_isMountClient pwr_Bit(3)
#define net_mGo_inSibList pwr_Bit(4)
#define net_mGo_hasSubClass pwr_Bit(5)

#define net_mGo_isClient (net_mGo_isAliasClient|net_mGo_isMountClient)

#define net_mGo_ (~net_mGo__)
} net_mGo;
struct net_sOixLink {
	pwr_tObjectIx flink;
	pwr_tObjectIx blink;
};
typedef struct net_sOixLink net_sOixLink;
struct net_sGobject {
	pwr_tObjid oid;
	pwr_tClassId cid;
	cdh_sFamily f;
	net_sOixLink sib;
	pwr_tObjid soid;
	pwr_tUInt32 size;
	net_mGo flags;
};
typedef struct net_sGobject net_sGobject;
struct net_sTime {
	u_int tv_sec;
	u_int tv_nsec;
};
typedef struct net_sTime net_sTime;
typedef struct {
 net_sMessage hdr; /**< Header */
 pwr_tStatus sts; /**< Status */
 pwr_sAttrRef circ_aref; /**< CircBuffer attribute reference. */
 pwr_tUInt32 first_idx; /**< First index in buffer. */
 pwr_tUInt32 last_idx; /**< Last index in buffer. */
 pwr_tUInt32 offset; /**< Offset for next update. */
 pwr_tUInt32 size; /**< Returned number of samples. */
 pwr_tUInt32 bufsize; /**< Size data in bytes. */
 char buf[1]; /**< Data */
} net_sGetCircBufferR;
bool_t xdr_net_sGetCircBufferR(XDR *xdrs, net_sGetCircBufferR *objp);
struct net_sUpdateCircBuffer {
	net_sMessage hdr;
	pwr_tUInt32 info_size;
	pwr_sAttrRef circ_aref[10];
	pwr_tUInt32 resolution[10];
	pwr_tUInt32 samples[10];
	pwr_tUInt32 last_idx[10];
	pwr_tUInt32 offset[10];
	pwr_tUInt32 bufsize[10];
};
typedef struct net_sUpdateCircBuffer net_sUpdateCircBuffer;
typedef struct {
 net_sMessage hdr; /**< Header */
 pwr_tStatus sts; /**< Status */
 pwr_tUInt32 info_size;
 pwr_sAttrRef circ_aref[10]; /**< CircBuffer attribute reference. */
 pwr_tUInt32 first_idx[10]; /**< First index in buffer. */
 pwr_tUInt32 last_idx[10]; /**< Last index in buffer. */
 pwr_tUInt32 offset[10]; /**< Offset for next update. */
 pwr_tUInt32 size[10]; /**< Returned number of samples. */
 pwr_tUInt32 bufsize[10]; /**< Size data for each item in bytes. */
 pwr_tUInt32 bsize; /**< Total size data in bytes. */
 char buf[1]; /**< Data */
} net_sUpdateCircBufferR;
bool_t xdr_net_sUpdateCircBufferR(XDR *xdrs, net_sUpdateCircBufferR *objp);
/*  Max # of gohs in a cache_fetch_response. The message will not be
    bigger than cvol_cMaxSize bytes.  */

/* Callable functions.  */

void *
net_Alloc (
 pwr_tStatus *sts,
 qcom_sPut *put,
 int size,
 net_eMsg subtype
);
pwr_tBoolean
net_Free (
 pwr_tStatus *sts,
 void *mp
);
pwr_tBoolean
net_Send (
 pwr_tStatus *sts,
 qcom_sQid *tgt,
 qcom_sPut *put
);
pwr_tBoolean
net_Reply (
 pwr_tStatus *sts,
 qcom_sGet *get,
 qcom_sPut *put,
 pwr_tSid sid
);
pwr_tBoolean
net_Put (
 pwr_tStatus *sts,
 qcom_sQid *tgt,
 void *mp,
 net_eMsg type,
 unsigned int id,
 int size,
 pwr_tSid sid
);
void *
net_Receive (
 pwr_tStatus *sts,
 qcom_sGet *get,
 int tmo
);
void *
net_Request (
 pwr_tStatus *sts,
 qcom_sQid *tgt,
 qcom_sPut *put,
 qcom_sGet *get,
 net_eMsg gtype,
 pwr_tBitMask flags,
 pwr_tSid sid
);
pwr_tBoolean
net_Connect (
 pwr_tStatus *sts,
 qcom_sAid *aid,
 qcom_sQid *qid,
 qcom_sQattr *attr,
 const char *name
);
pwr_tTime net_NetTimeToTime( const net_sTime *nt);
net_sTime net_TimeToNetTime( const pwr_tTime *t);
pwr_tDeltaTime net_NetTimeToDeltaTime( const net_sTime *nt);
net_sTime net_DeltaTimeToNetTime( const pwr_tDeltaTime *t);
net_sTime net_DeltaTimeToNetTime( const pwr_tDeltaTime *t);
int net_GetTime( net_sTime *nt);
int net_StringToAddr( char *str, struct in_addr *naddr);
extern  bool_t xdr_net_eMsg (XDR *, net_eMsg*);
extern  bool_t xdr_net_eEvent (XDR *, net_eEvent*);
extern  bool_t xdr_net_sMessage (XDR *, net_sMessage*);
extern  bool_t xdr_net_sError (XDR *, net_sError*);
extern  bool_t xdr_net_sNode (XDR *, net_sNode*);
extern  bool_t xdr_net_sId (XDR *, net_sId*);
extern  bool_t xdr_net_sIdAck2 (XDR *, net_sIdAck2*);
extern  bool_t xdr_net_sNodeUp (XDR *, net_sNodeUp*);
extern  bool_t xdr_net_eState (XDR *, net_eState*);
extern  bool_t xdr_net_sClassDef (XDR *, net_sClassDef*);
extern  bool_t xdr_net_sObjBodyDef (XDR *, net_sObjBodyDef*);
extern  bool_t xdr_net_sParInfo (XDR *, net_sParInfo*);
extern  bool_t xdr_net_sParam (XDR *, net_sParam*);
extern  bool_t xdr_net_sSubSpec (XDR *, net_sSubSpec*);
extern  bool_t xdr_net_sSanEntry (XDR *, net_sSanEntry*);
extern  bool_t xdr_net_sAlarm (XDR *, net_sAlarm*);
extern  bool_t xdr_net_sSanData (XDR *, net_sSanData*);
extern  bool_t xdr_net_sOidToObject (XDR *, net_sOidToObject*);
extern  bool_t xdr_net_sOixLink (XDR *, net_sOixLink*);
extern  bool_t xdr_net_sGobject (XDR *, net_sGobject*);
extern bool_t xdr_net_eMsg ();
extern bool_t xdr_net_eEvent ();
extern bool_t xdr_net_sMessage ();
extern bool_t xdr_net_sError ();
extern bool_t xdr_net_sNode ();
extern bool_t xdr_net_sId ();
extern bool_t xdr_net_sIdAck2 ();
extern bool_t xdr_net_sNodeUp ();
extern bool_t xdr_net_eState ();
extern bool_t xdr_net_sClassDef ();
extern bool_t xdr_net_sObjBodyDef ();
extern bool_t xdr_net_sParInfo ();
extern bool_t xdr_net_sParam ();
extern bool_t xdr_net_sSubSpec ();
extern bool_t xdr_net_sSanEntry ();
extern bool_t xdr_net_sAlarm ();
extern bool_t xdr_net_sSanData ();
extern bool_t xdr_net_sOidToObject ();
extern bool_t xdr_net_sOixLink ();
extern bool_t xdr_net_sGobject ();