pwrp-interface-orig/rt_net_h.ads


  --*< Header  
   subtype net_sGetCircBufferR_buf_array is Interfaces.C.char_array (0 .. 0);
   type net_sGetCircBufferR is record
      hdr : aliased net_sMessage;  -- rt_net.h:701
      sts : aliased pwr_h.pwr_tStatus;  -- rt_net.h:702
      circ_aref : aliased pwr_h.pwr_sAttrRef;  -- rt_net.h:703
      first_idx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:704
      last_idx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:705
      offset : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:706
      size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:707
      bufsize : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:708
      buf : aliased net_sGetCircBufferR_buf_array;  -- rt_net.h:709
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGetCircBufferR);  -- rt_net.h:710

   --  skipped anonymous struct anon_145

  --*< Status  
  --*< CircBuffer attribute reference.  
  --*< First index in buffer.  
  --*< Last index in buffer.  
  --*< Offset for next update.  
  --*< Returned number of samples.  
  --*< Size data in bytes.  
  --*< Data  
   function xdr_net_sGetCircBufferR (xdrs : access rpc_xdr_h.XDR; objp : access net_sGetCircBufferR) return rpc_types_h.bool_t;  -- rt_net.h:712
   pragma Import (C, xdr_net_sGetCircBufferR, "xdr_net_sGetCircBufferR");

   type net_sUpdateCircBuffer_circ_aref_array is array (0 .. 9) of aliased pwr_h.pwr_sAttrRef;
   type net_sUpdateCircBuffer_resolution_array is array (0 .. 9) of aliased pwr_h.pwr_tUInt32;
   type net_sUpdateCircBuffer_samples_array is array (0 .. 9) of aliased pwr_h.pwr_tUInt32;
   type net_sUpdateCircBuffer_last_idx_array is array (0 .. 9) of aliased pwr_h.pwr_tUInt32;
   type net_sUpdateCircBuffer_offset_array is array (0 .. 9) of aliased pwr_h.pwr_tUInt32;
   type net_sUpdateCircBuffer_bufsize_array is array (0 .. 9) of aliased pwr_h.pwr_tUInt32;
   type net_sUpdateCircBuffer is record
      hdr : aliased net_sMessage;  -- rt_net.h:716
      info_size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:717
      circ_aref : aliased net_sUpdateCircBuffer_circ_aref_array;  -- rt_net.h:718
      resolution : aliased net_sUpdateCircBuffer_resolution_array;  -- rt_net.h:719
      samples : aliased net_sUpdateCircBuffer_samples_array;  -- rt_net.h:720
      last_idx : aliased net_sUpdateCircBuffer_last_idx_array;  -- rt_net.h:721
      offset : aliased net_sUpdateCircBuffer_offset_array;  -- rt_net.h:722
      bufsize : aliased net_sUpdateCircBuffer_bufsize_array;  -- rt_net.h:723
   end record;
   pragma Convention (C_Pass_By_Copy, net_sUpdateCircBuffer);  -- rt_net.h:715

  --*< Header  
   type net_sUpdateCircBufferR_circ_aref_array is array (0 .. 9) of aliased pwr_h.pwr_sAttrRef;
   type net_sUpdateCircBufferR_first_idx_array is array (0 .. 9) of aliased pwr_h.pwr_tUInt32;
   type net_sUpdateCircBufferR_last_idx_array is array (0 .. 9) of aliased pwr_h.pwr_tUInt32;
   type net_sUpdateCircBufferR_offset_array is array (0 .. 9) of aliased pwr_h.pwr_tUInt32;
   type net_sUpdateCircBufferR_size_array is array (0 .. 9) of aliased pwr_h.pwr_tUInt32;
   type net_sUpdateCircBufferR_bufsize_array is array (0 .. 9) of aliased pwr_h.pwr_tUInt32;
   subtype net_sUpdateCircBufferR_buf_array is Interfaces.C.char_array (0 .. 0);
   type net_sUpdateCircBufferR is record
      hdr : aliased net_sMessage;  -- rt_net.h:729
      sts : aliased pwr_h.pwr_tStatus;  -- rt_net.h:730
      info_size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:731
      circ_aref : aliased net_sUpdateCircBufferR_circ_aref_array;  -- rt_net.h:732
      first_idx : aliased net_sUpdateCircBufferR_first_idx_array;  -- rt_net.h:733
      last_idx : aliased net_sUpdateCircBufferR_last_idx_array;  -- rt_net.h:734
      offset : aliased net_sUpdateCircBufferR_offset_array;  -- rt_net.h:735
      size : aliased net_sUpdateCircBufferR_size_array;  -- rt_net.h:736
      bufsize : aliased net_sUpdateCircBufferR_bufsize_array;  -- rt_net.h:737
      bsize : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:738
      buf : aliased net_sUpdateCircBufferR_buf_array;  -- rt_net.h:739
   end record;
   pragma Convention (C_Pass_By_Copy, net_sUpdateCircBufferR);  -- rt_net.h:740

   --  skipped anonymous struct anon_146

  --*< Status  
  --*< CircBuffer attribute reference.  
  --*< First index in buffer.  
  --*< Last index in buffer.  
  --*< Offset for next update.  
  --*< Returned number of samples.  
  --*< Size data for each item in bytes.  
  --*< Total size data in bytes.  
  --*< Data  
   function xdr_net_sUpdateCircBufferR (xdrs : access rpc_xdr_h.XDR; objp : access net_sUpdateCircBufferR) return rpc_types_h.bool_t;  -- rt_net.h:742
   pragma Import (C, xdr_net_sUpdateCircBufferR, "xdr_net_sUpdateCircBufferR");

  --  Max # of gohs in a cache_fetch_response. The message will not be
  --    bigger than cvol_cMaxSize bytes.   

  -- Callable functions.   
   function net_Alloc
     (sts : access pwr_h.pwr_tStatus;
      put : access rt_qcom_h.qcom_sPut;
      size : int;
      c_subtype : net_eMsg) return System.Address;  -- rt_net.h:750
   pragma Import (C, net_Alloc, "net_Alloc");

   function net_Free (sts : access pwr_h.pwr_tStatus; mp : System.Address) return pwr_h.pwr_tBoolean;  -- rt_net.h:758
   pragma Import (C, net_Free, "net_Free");

   function net_Send
     (sts : access pwr_h.pwr_tStatus;
      tgt : access rt_qcom_h.qcom_sQid;
      put : access rt_qcom_h.qcom_sPut) return pwr_h.pwr_tBoolean;  -- rt_net.h:764
   pragma Import (C, net_Send, "net_Send");

   function net_Reply
     (sts : access pwr_h.pwr_tStatus;
      get : access rt_qcom_h.qcom_sGet;
      put : access rt_qcom_h.qcom_sPut;
      sid : pwr_h.pwr_tSid) return pwr_h.pwr_tBoolean;  -- rt_net.h:771
   pragma Import (C, net_Reply, "net_Reply");

   function net_Put
     (sts : access pwr_h.pwr_tStatus;
      tgt : access rt_qcom_h.qcom_sQid;
      mp : System.Address;
      c_type : net_eMsg;
      id : unsigned;
      size : int;
      sid : pwr_h.pwr_tSid) return pwr_h.pwr_tBoolean;  -- rt_net.h:779
   pragma Import (C, net_Put, "net_Put");

   function net_Receive
     (sts : access pwr_h.pwr_tStatus;
      get : access rt_qcom_h.qcom_sGet;
      tmo : int) return System.Address;  -- rt_net.h:790
   pragma Import (C, net_Receive, "net_Receive");

   function net_Request
     (sts : access pwr_h.pwr_tStatus;
      tgt : access rt_qcom_h.qcom_sQid;
      put : access rt_qcom_h.qcom_sPut;
      get : access rt_qcom_h.qcom_sGet;
      gtype : net_eMsg;
      flags : pwr_h.pwr_tBitMask;
      sid : pwr_h.pwr_tSid) return System.Address;  -- rt_net.h:797
   pragma Import (C, net_Request, "net_Request");

   function net_Connect
     (sts : access pwr_h.pwr_tStatus;
      aid : access rt_qcom_h.qcom_sAid;
      qid : access rt_qcom_h.qcom_sQid;
      attr : access rt_qcom_h.qcom_sQattr;
      name : Interfaces.C.Strings.chars_ptr) return pwr_h.pwr_tBoolean;  -- rt_net.h:808
   pragma Import (C, net_Connect, "net_Connect");

   net_cNTime : aliased net_sTime;  -- rt_net.h:816
   pragma Import (CPP, net_cNTime, "_ZL10net_cNTime");

   function net_NetTimeToTime (nt : System.Address) return pwr_h.pwr_tTime;  -- rt_net.h:818
   pragma Import (C, net_NetTimeToTime, "net_NetTimeToTime");

   function net_TimeToNetTime (t : access constant pwr_h.pwr_tTime) return net_sTime;  -- rt_net.h:819
   pragma Import (C, net_TimeToNetTime, "net_TimeToNetTime");

   function net_NetTimeToDeltaTime (nt : System.Address) return pwr_h.pwr_tDeltaTime;  -- rt_net.h:820
   pragma Import (C, net_NetTimeToDeltaTime, "net_NetTimeToDeltaTime");

   function net_DeltaTimeToNetTime (t : access constant pwr_h.pwr_tDeltaTime) return net_sTime;  -- rt_net.h:822
   pragma Import (C, net_DeltaTimeToNetTime, "net_DeltaTimeToNetTime");

   function net_GetTime (nt : access net_sTime) return int;  -- rt_net.h:823
   pragma Import (C, net_GetTime, "net_GetTime");

   function net_StringToAddr (str : Interfaces.C.Strings.chars_ptr; naddr : access netinet_in_h.in_addr) return int;  -- rt_net.h:824
   pragma Import (C, net_StringToAddr, "net_StringToAddr");

  -- the xdr functions  
   function xdr_net_eMsg (arg1 : access rpc_xdr_h.XDR; arg2 : access net_eMsg) return rpc_types_h.bool_t;  -- rt_net.h:835
   pragma Import (C, xdr_net_eMsg, "xdr_net_eMsg");

   function xdr_net_eEvent (arg1 : access rpc_xdr_h.XDR; arg2 : access net_eEvent) return rpc_types_h.bool_t;  -- rt_net.h:836
   pragma Import (C, xdr_net_eEvent, "xdr_net_eEvent");

   function xdr_net_sMessage (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sMessage) return rpc_types_h.bool_t;  -- rt_net.h:837
   pragma Import (C, xdr_net_sMessage, "xdr_net_sMessage");

   function xdr_net_sError (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sError) return rpc_types_h.bool_t;  -- rt_net.h:838
   pragma Import (C, xdr_net_sError, "xdr_net_sError");

   function xdr_net_sNode (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sNode) return rpc_types_h.bool_t;  -- rt_net.h:839
   pragma Import (C, xdr_net_sNode, "xdr_net_sNode");

   function xdr_net_sId (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sId) return rpc_types_h.bool_t;  -- rt_net.h:840
   pragma Import (C, xdr_net_sId, "xdr_net_sId");

   function xdr_net_sIdAck2 (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sIdAck2) return rpc_types_h.bool_t;  -- rt_net.h:841
   pragma Import (C, xdr_net_sIdAck2, "xdr_net_sIdAck2");

   function xdr_net_sNodeUp (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sNodeUp) return rpc_types_h.bool_t;  -- rt_net.h:842
   pragma Import (C, xdr_net_sNodeUp, "xdr_net_sNodeUp");

   function xdr_net_eState (arg1 : access rpc_xdr_h.XDR; arg2 : access net_eState) return rpc_types_h.bool_t;  -- rt_net.h:843
   pragma Import (C, xdr_net_eState, "xdr_net_eState");

   function xdr_net_sClassDef (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sClassDef) return rpc_types_h.bool_t;  -- rt_net.h:844
   pragma Import (C, xdr_net_sClassDef, "xdr_net_sClassDef");

   function xdr_net_sObjBodyDef (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sObjBodyDef) return rpc_types_h.bool_t;  -- rt_net.h:845
   pragma Import (C, xdr_net_sObjBodyDef, "xdr_net_sObjBodyDef");

   function xdr_net_sParInfo (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sParInfo) return rpc_types_h.bool_t;  -- rt_net.h:846
   pragma Import (C, xdr_net_sParInfo, "xdr_net_sParInfo");

   function xdr_net_sParam (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sParam) return rpc_types_h.bool_t;  -- rt_net.h:847
   pragma Import (C, xdr_net_sParam, "xdr_net_sParam");

   function xdr_net_sSubSpec (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sSubSpec) return rpc_types_h.bool_t;  -- rt_net.h:848
   pragma Import (C, xdr_net_sSubSpec, "xdr_net_sSubSpec");

   function xdr_net_sSanEntry (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sSanEntry) return rpc_types_h.bool_t;  -- rt_net.h:849
   pragma Import (C, xdr_net_sSanEntry, "xdr_net_sSanEntry");

   function xdr_net_sAlarm (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sAlarm) return rpc_types_h.bool_t;  -- rt_net.h:850
   pragma Import (C, xdr_net_sAlarm, "xdr_net_sAlarm");

   function xdr_net_sSanData (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sSanData) return rpc_types_h.bool_t;  -- rt_net.h:851
   pragma Import (C, xdr_net_sSanData, "xdr_net_sSanData");

   function xdr_net_sOidToObject (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sOidToObject) return rpc_types_h.bool_t;  -- rt_net.h:852
   pragma Import (C, xdr_net_sOidToObject, "xdr_net_sOidToObject");

   function xdr_net_sOixLink (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sOixLink) return rpc_types_h.bool_t;  -- rt_net.h:853
   pragma Import (C, xdr_net_sOixLink, "xdr_net_sOixLink");

   function xdr_net_sGobject (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sGobject) return rpc_types_h.bool_t;  -- rt_net.h:854
   pragma Import (C, xdr_net_sGobject, "xdr_net_sGobject");
